--- a/CLOCK_CHAT/templates/base.html
+++ b/CLOCK_CHAT/templates/base.html
@@ -6,19 +6,79 @@
     <title>Clock Chat</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .sidebar {
+            height: 100%;
+            width: 250px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            background-color: #111;
+            padding-top: 20px;
+        }
+
+        .sidebar a {
+            padding: 15px;
+            text-decoration: none;
+            font-size: 18px;
+            color: white;
+            display: block;
+        }
+
+        .sidebar a.btn {
+            margin-left: 10px;
+        }
+
+        .content {
+            margin-left: 260px;
+            padding: 0;
+        }
+
+        @media (max-width: 767.98px) {
+            .sidebar {
+                width: 100%;
+                height: auto;
+                position: relative;
+            }
+
+            .sidebar a {
+                float: left;
+            }
+
+            .sidebar a.btn {
+                float: none;
+                display: inline-block;
+            }
+
+            .content {
+                margin-left: 0;
+            }
+        }
+
+        @media (min-width: 768px) {
+            .sidebar a {
+                float: none;
+            }
+
+            .sidebar a.btn {
+                float: none;
+                display: block;
+            }
+        }
+    </style>
 </head>
 <body>
-    <div class="sidebar" style="height: 100%; width: 250px; position: fixed; top: 0; left: 0; background-color: #111; padding-top: 20px;">
-        <a href="#" style="padding: 15px; text-decoration: none; font-size: 18px; color: white; display: block;">Home</a>
-        <a href="#" style="padding: 15px; text-decoration: none; font-size: 18px; color: white; display: block;">Menu</a>
-        <a href="#" style="padding: 15px; text-decoration: none; font-size: 18px; color: white; display: block;">Browse</a>
-        <a href="#" class="btn btn-primary" style="margin-left: 10px;">Sign Up</a>
-        <a href="#" class="btn btn-success" style="margin-left: 10px;">Login</a>
+    <div class="sidebar">
+        <a href="#">Home</a>
+        <a href="#">Menu</a>
+        <a href="#">Browse</a>
+        <a href="#" class="btn btn-primary">Sign Up</a>
+        <a href="#" class="btn btn-success">Login</a>
     </div>
 
-    <div class="content" style="margin-left: 260px; padding: 0px;">
+    <div class="content">
         <h1 class="text-center bg-dark text-white py-3">Welcome to our Clock Chat</h1>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="margin: 0;">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <a class="navbar-brand" href="#">Home</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
