"implement log out"

--- a/CLOCK_CHAT/templates/enduser/Chats/test.html
+++ b/CLOCK_CHAT/templates/enduser/Chats/test.html
@@ -6,6 +6,8 @@
     <title>Chat App</title>
     <link rel="stylesheet" href="static/css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 </head>
 <body>
     <div class="chat-container">
@@ -24,133 +26,11 @@
                 <span class="unread-badge">1</span>
             </div>
 
-            <div class="chat-item" data-name="Iron Man" data-message="Let's catch up later!" data-avatar="icon2.png">
-                <img src="icon2.png" alt="User" class="avatar">
-                <div class="chat-info">
-                    <div class="chat-name">Iron Man</div>
-                    <div class="chat-message">Let's catch up later!</div>
-                </div>
-                <span class="unread-badge">1</span>
-            </div>
-
-            <div class="chat-item" data-name="Captain Jack Sparrow" data-message="How was your day?" data-avatar="icon3.png">
-                <img src="icon3.png" alt="User" class="avatar">
-                <div class="chat-info">
-                    <div class="chat-name">Captain Jack Sparrow</div>
-                    <div class="chat-message">How was your day?</div>
-                </div>
-            </div>
-
-            <div class="chat-item" data-name="Spider Man" data-message="Are we still meeting later?" data-avatar="icon4.png">
-                <img src="icon4.png" alt="User" class="avatar">
-                <div class="chat-info">
-                    <div class="chat-name">Spider Man</div>
-                    <div class="chat-message">Are we still meeting later?</div>
-                </div>
-            </div>
-            
-            <div class="chat-item" data-name="Batman" data-message="I need those files!" data-avatar="icon5.png">
-                <img src="icon5.png" alt="User" class="avatar">
-                <div class="chat-info">
-                    <div class="chat-name">Batman</div>
-                    <div class="chat-message">I need those files!</div>
-                </div>
-                <span class="unread-badge">1</span>
-            </div>
-            
-            <div class="chat-item" data-name="Batman" data-message="I need those files!" data-avatar="icon5.png">
-                <img src="icon5.png" alt="User" class="avatar">
-                <div class="chat-info">
-                    <div class="chat-name">Batman</div>
-                    <div class="chat-message">I need those files!</div>
-                </div>
-                <span class="unread-badge">1</span>
-            </div>
-            <div class="chat-item" data-name="Batman" data-message="I need those files!" data-avatar="icon5.png">
-                <img src="icon5.png" alt="User" class="avatar">
-                <div class="chat-info">
-                    <div class="chat-name">Batman</div>
-                    <div class="chat-message">I need those files!</div>
-                </div>
-                <span class="unread-badge">1</span>
-            </div>
-            <div class="chat-item" data-name="Batman" data-message="I need those files!" data-avatar="icon5.png">
-                <img src="icon5.png" alt="User" class="avatar">
-                <div class="chat-info">
-                    <div class="chat-name">Batman</div>
-                    <div class="chat-message">I need those files!</div>
-                </div>
-                <span class="unread-badge">1</span>
-            </div>
-            <div class="chat-item" data-name="Batman" data-message="I need those files!" data-avatar="icon5.png">
-                <img src="icon5.png" alt="User" class="avatar">
-                <div class="chat-info">
-                    <div class="chat-name">Batman</div>
-                    <div class="chat-message">I need those files!</div>
-                </div>
-                <span class="unread-badge">1</span>
-            </div>
-            <div class="chat-item" data-name="Batman" data-message="I need those files!" data-avatar="icon5.png">
-                <img src="icon5.png" alt="User" class="avatar">
-                <div class="chat-info">
-                    <div class="chat-name">Batman</div>
-                    <div class="chat-message">I need those files!</div>
-                </div>
-                <span class="unread-badge">1</span>
-            </div>
-            <div class="chat-item" data-name="Batman" data-message="I need those files!" data-avatar="icon5.png">
-                <img src="icon5.png" alt="User" class="avatar">
-                <div class="chat-info">
-                    <div class="chat-name">Batman</div>
-                    <div class="chat-message">I need those files!</div>
-                </div>
-                <span class="unread-badge">1</span>
-            </div>
-            <div class="chat-item" data-name="Batman" data-message="I need those files!" data-avatar="icon5.png">
-                <img src="icon5.png" alt="User" class="avatar">
-                <div class="chat-info">
-                    <div class="chat-name">Batman</div>
-                    <div class="chat-message">I need those files!</div>
-                </div>
-                <span class="unread-badge">1</span>
-            </div>
-            <div class="chat-item" data-name="Batman" data-message="I need those files!" data-avatar="icon5.png">
-                <img src="icon5.png" alt="User" class="avatar">
-                <div class="chat-info">
-                    <div class="chat-name">Batman</div>
-                    <div class="chat-message">I need those files!</div>
-                </div>
-                <span class="unread-badge">1</span>
-            </div>
-            <div class="chat-item" data-name="Batman" data-message="I need those files!" data-avatar="icon5.png">
-                <img src="icon5.png" alt="User" class="avatar">
-                <div class="chat-info">
-                    <div class="chat-name">Batman</div>
-                    <div class="chat-message">I need those files!</div>
-                </div>
-                <span class="unread-badge">1</span>
-            </div>
-            <div class="chat-item" data-name="Batman" data-message="I need those files!" data-avatar="icon5.png">
-                <img src="icon5.png" alt="User" class="avatar">
-                <div class="chat-info">
-                    <div class="chat-name">Batman</div>
-                    <div class="chat-message">I need those files!</div>
-                </div>
-                <span class="unread-badge">1</span>
-            </div>
-            <div class="chat-item" data-name="Batman" data-message="I need those files!" data-avatar="icon5.png">
-                <img src="icon5.png" alt="User" class="avatar">
-                <div class="chat-info">
-                    <div class="chat-name">Batman</div>
-                    <div class="chat-message">I need those files!</div>
-                </div>
-                <span class="unread-badge">1</span>
-            </div>
-
             <div class="bottom-icons">
                 <span class="material-icons">chat</span>
                 <span class="material-icons">motion_photos_on</span>
                 <span class="material-icons">settings</span>
+                <i class="fa-solid fa-power-off" onclick="window.location.href='{% url 'log_out' %}'" style="color: #000000;"></i>
             </div>
             
 
