--- a/CLOCK_CHAT/templates/auth/signin.html
+++ b/CLOCK_CHAT/templates/auth/signin.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +8,28 @@
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
+        <!-- Toast Message Implemention-->
+   
+        <script>
+            window.djangoMessages = [
+            {% for message in messages %}
+                {
+                "tags": "{{ message.tags }}",
+                "message": "{{ message|escapejs }}"
+                }{% if not forloop.last %},{% endif %}
+            {% endfor %}
+            ];
+            console.log("djangoMessages:", window.djangoMessages);  // Debug output
+        </script>
+    
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+      
+        <!-- Include external toast script -->
+        <script src="{% static 'js/toast_message.js' %}"></script>
+
+    <!-- End Toast -->
 
     <style>
         body {
