--- a/CLOCK_CHAT/templates/enduser/Chats/test.html
+++ b/CLOCK_CHAT/templates/enduser/Chats/test.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +8,27 @@
     <link rel="stylesheet" href="static/css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+    <!-- Toast Message Implemention-->
+   
+    <script>
+        window.djangoMessages = [
+        {% for message in messages %}
+            {
+            "tags": "{{ message.tags }}",
+            "message": "{{ message|escapejs }}"
+            }{% if not forloop.last %},{% endif %}
+        {% endfor %}
+        ];
+        console.log("djangoMessages:", window.djangoMessages);  // Debug output
+    </script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  
+    <!-- Include external toast script -->
+    <script src="{% static 'js/toast_message.js' %}"></script>
+    <!-- End Toast -->
 
 </head>
 <body>
